# romea_path_following

romea_path_following/: CMakeLists.txt  package.xml
romea_path_following/include/romea_path_following/: path_following.hpp  path_following_algo.hpp  path_following_component.hpp  path_following_mode.hpp
romea_path_following/src/: path_following.cpp  path_following_algo.cpp  path_following_component.cpp  path_following_mode.cpp
romea_path_following_bringup/: CMakeLists.txt  package.xml
romea_path_following_bringup/launch/: path_following.launch.py
